--- a/CSS_advanced/styles/12-style.css
+++ b/CSS_advanced/styles/12-style.css
@@ -40,21 +40,9 @@ body {
 }
 
 /* Anchor elements styling */
-a[href] {
+a {
     color: var(--text-color);
     text-decoration: none;
-}
-
-a[href]:visited {
-    font-style: italic;
-}
-
-a[href]:hover {
-    text-decoration: underline;
-}
-
-a[href]:active {
-    background-color: var(--color-light-grey);
 }
 
 /* Accessibility - visually hidden elements */
